# 1d

./: README.md  compute_graph.drawio  conv1d_sdu.cc  conv1d_sdu.h  custom_conv1d.py  main.cc  未命名绘图.drawio
new/: CMakeLists.txt  conv1d.cc  目前报错信息
